# xiv-emote-parser

./: Cargo.toml  README.md  emote-22106.json  emote-221102-1.json  emote-221102-2.json  emote-221102-3.json
src/: lib.rs  log_message.rs  repository.rs
src/log_message/: ast.rs  log_message.pest  parser.rs  props.rs  types.rs
src/log_message/ast/: condition.rs  condition_texts.rs  parser.rs  types.rs
tests/: log_message.rs  repository.rs
