[package]
name = "discord-xiv-emotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
pest = "2.3"
pest_derive = "2.3"
pest_consume = "1.1"
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
