[package]
name = "xiv-emote-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
pest = "2.3"
pest_derive = "2.3"
pest_consume = "1.1"
strum = "0.24"
strum_macros = "0.24"
log = "0.4"

serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

reqwest = { version = "0.11", features = ["json"], optional = true }

[features]
json = ["dep:serde", "dep:serde_derive", "dep:serde_json"]
xivapi = ["reqwest", "json"]
xivapi_blocking = ["reqwest/blocking", "json"]
async = []

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
pretty_env_logger = "0.4"
