[package]
name = "xiv-emote-parser"
version = "0.1.0"
edition = "2021"
authors = ["Mattori Birnbaum <mattori.birnbaum@gmail.com>"]
description = "Parses log messages for emotes from FFXIV into a sequence of message parts"
repository = "https://github.com/PsychicNoodles/xiv-emote-parser"
license = "MIT"
keywords = ["parser", "api"]
categories = ["parser-implementations"]

[dependencies]
thiserror = "1.0"
pest = "2.3"
pest_derive = "2.3"
pest_consume = "1.1"
strum = "0.24"
strum_macros = "0.24"
log = "0.4"

serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

reqwest = { version = "0.11", features = ["json"], optional = true }

[features]
json = ["dep:serde", "dep:serde_derive", "dep:serde_json"]
xivapi = ["reqwest", "json"]
xivapi_blocking = ["reqwest/blocking", "json"]
async = []

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
pretty_env_logger = "0.4"
